--- a/style.css
+++ b/style.css
@@ -215,59 +215,10 @@ span{
 
 /*  What I do section */
 
- .iwhat-i-do{
-    margin-top: 60px;
-    margin-bottom: 120px;
-    background: none;
-}
-.iwhat-i-do h3{
-    color: red;
-    text-align: center;
-    padding: 0;
-    margin-bottom: 12px;
-    margin-top: 50px;
-}
-.iwhat-i-do h1{
-    text-align: center;
-    margin-bottom: 40px;
-}
-.icol-3{
-    box-sizing: border-box;
-    border-radius: 10px;
-    width: 31%; 
-    background:  linear-gradient(145deg, #e2e8ec, #ffffff);
-    box-shadow:  5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
-    border: 1px solid red;
-    border-radius: 30px;
-    background: #363636;
-   
-}
-
-
-
-.iiner{
-    padding: 30px 40px;
-
-    
-}
-.ido-icon i{
-    font-size: 40px;
-    margin-top: 10px;
-    margin-bottom: 30px;
-    color: red;
-}
-
-.ido-section h2{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    margin-bottom: 10px;
-} 
-
-
 /* main what i do */
 
 .what-i-do{
-    margin-top: 120px;
+    margin-top: 120px; margin-bottom: 50px;
    
     
 }
@@ -288,23 +239,27 @@ span{
     background:  linear-gradient(145deg, #e2e8ec, #ffffff);
     box-shadow:  5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
     width: 25%;
-    padding: 25px 30px 70px 45px;
+    padding: 21px 20px 60px 45px;
     border-radius: 10px;
+    position: relative;
 }
+
 
 
 .col-3 h2{
     background: none;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: 10px;
     margin-bottom: 20px;
+    font-size: 22px;
+    
 }
 .col-3 p{
     background: none;
     font-family: 'Poppins', sans-serif;
-    color: #676767;
-    font-size: 14;
+    
+    font-size: 15px;
     line-height: 25px;
     
 }
@@ -313,8 +268,23 @@ span{
     font-size: 40px;
     margin-top: 25px;
     margin-bottom: 30px;
-    color: red;
+    color: #FF0652;
 }
+
+
+.col-3:hover{
+    background:  #D96483;
+    color: white;
+    transition: .5s;
+   
+}
+
+.iwhat-i-do .col-3:hover{
+    background: #6E67CC;
+    color: #ffffff;
+    transform: .4s;
+}
+
 
 /* .col-3:hover{
     background: linear-gradient(145deg, #6E67CC, #D96483);
@@ -326,13 +296,151 @@ span{
 
 /* protfolio  section*/
 
-.protfolio{
+.my-resume{
     text-align: center;
 }
-.protfolio h3{
+.my-resume h3{
     color: red;
     margin-bottom: 12px;
 }
  h1{
     color: #3C3E41;
+}
+
+
+/* my-resume */
+
+.my-resume{
+    margin-bottom: 100px;
+    margin-top: 160px;
+}
+
+.resume-menu{
+    margin-top: 60px;
+}
+
+
+
+
+
+.resume-menu .col-4{
+    width: 25%;
+    background:  linear-gradient(145deg, #e2e8ec, #ffffff);
+    box-shadow:  5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
+    padding: 25px 10px;
+    
+    font-size: 16px;
+
+}
+
+
+.education h4{
+    color: red;
+   
+}
+.resume-menu  .education{
+    border-radius: 10px;
+    box-shadow:  5px 5px 15px #acb7c7, -5px -5px 15px #ffffff;
+    z-index: 3;
+}
+h4{
+    background: none;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.resume-menu .col-4:hover {
+    border-radius: 10px;
+    box-shadow:  5px 5px 15px #acb7c7, -5px -5px 15px #ffffff;
+    color: red;
+    transition: .4s;
+    top: -2px;
+
+}
+
+/* education details */
+
+
+.education-details{
+    margin-top: 50px;
+}
+.education-year .heading{
+    text-align: left;
+}
+
+.education-year h1{
+   font-size: 40PX;
+   margin-top: -10PX;
+   margin-bottom: -30px;
+}
+.education-details h2{
+
+    background: none;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    text-align: left;
+    /* padding: 50px 0px 40px 50px; */
+    font-size: 22px;
+    margin-bottom: 5PX;
+}
+
+.education-details p{
+    text-align: left;
+    background: none;
+    font-family: 'Poppins', sans-serif;
+    
+    font-size: 12px;
+    line-height: 25px;
+    letter-spacing: 2px;
+    display: block;
+    margin-bottom: 0px;
+
+    
+}
+.cgpa {
+    width: 66px;
+    text-align: center;
+    margin-left:370px ;
+    margin-top: -40px;
+    border-radius: 5px;
+    color: #FF0652;
+    font-weight: 500;
+    border: 1px solid rgb(227, 205, 85);
+    padding-left: 10PX;
+
+}
+
+.VARSITY{
+    
+    font-family: Arial, Helvetica, sans-serif;
+    background: none;
+}
+.education-details .strate-line{
+    width: 450PX;
+    background: #b7babd;
+    margin-top: 30px;
+    
+    
+}
+
+.education-details .col-2{
+    background:  linear-gradient(145deg, #e2e8ec, #ffffff);
+    box-shadow:  5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
+    width: 33%;
+    padding: 60px 120px 60px 60px;
+    border-radius: 10px;
+
+}  
+.col-2 p{
+    font-family: 'Poppins', sans-serif;
+    
+    font-size: 14px;
+    line-height: 25px;
+    letter-spacing: 1px;
+   
+}
+.education-details .col-2:hover{
+    background: linear-gradient(145deg, #6E67CC, #D96483);
+    color: #ffffff;
+    transition: .4s;
 }
